<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyHead"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collectHead"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"/>

 <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collect"
            android:textSize="15sp"/>



    </LinearLayout>

</ScrollView>