<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.example.bekind.MainActivity">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="App Snipp"
                    android:layout_marginTop="40dp"/>

                <ScrollView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            style="@style/loginCard"
                            app:cardCornerRadius="@dimen/loginCardRadius"
                            android:elevation="5dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:layout_marginBottom="@dimen/loginViewsMargin"
                            android:background="@color/whiteCardColor">

                            <LinearLayout
                                style="@style/linearParent"
                                android:layout_gravity="center"
                                android:padding="@dimen/loginViewsMargin">

                                <TextView
                                    style="@style/headerTextPrimary"
                                    android:text="@string/register"
                                    android:layout_marginTop="@dimen/loginViewsMargin"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Registration Complete"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:id="@+id/completeRegistration"
                                    android:visibility="gone"
                                    android:textColor="@android:color/holo_green_dark"/>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:id="@+id/firstname"
                                        android:hint="First Name"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:id="@+id/lastname"
                                        android:hint="Last Name"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:inputType="phone"
                                        android:maxLines="1"
                                        android:id="@+id/mobilenumber"
                                        android:hint="Mobile Number"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:inputType="textEmailAddress"
                                        android:id="@+id/email"
                                        android:maxLines="1"
                                        android:hint="@string/login_email_hint"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:inputType="textPostalAddress"
                                        android:id="@+id/homeAddress"
                                        android:maxLines="2"
                                        android:hint="@string/signup_address_hint"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:hint="@string/login_password_hint"
                                        android:maxLines="1"
                                        android:id="@+id/password"
                                        android:inputType="textPassword"/>
                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/signup_text_margin_top">
                                    <EditText
                                        style="@style/modifiedEditText"
                                        android:hint="@string/login_password_confirm"
                                        android:maxLines="1"
                                        android:id="@+id/confirm_password"
                                        android:inputType="textPassword"/>
                                </android.support.design.widget.TextInputLayout>

                                <Button
                                    style="@style/loginButton"
                                    android:layout_gravity="center"
                                    android:id="@+id/register"
                                    android:text="Register" />

                                <TextView
                                    style="@style/parent"
                                    android:textAlignment="center"
                                    android:textStyle="bold"
                                    android:textColor="@color/primaryTextColor"
                                    android:id="@+id/alreadyHaveAccount"
                                    android:text="@string/signup_login_hint"
                                    android:layout_marginTop="@dimen/loginViewsMargin"/>

                            </LinearLayout>

                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:id="@+id/loading"
                                android:visibility="gone"
                                />
                        </android.support.v7.widget.CardView>





                    </LinearLayout>



                </ScrollView>







            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
